--- a/src/app.css
+++ b/src/app.css
@@ -2,15 +2,15 @@
   /* CSS HEX */
   --text: #12213b;
   --hover: #1d2d44ff;
-  --accent: #3FA029;
-  --border: #6A6A6A;
+  --accent: #3fa029;
+  --border: #6a6a6a;
   --background: #f8f9fa;
   --primary: #219ebcff;
   --primary-hover: #8ecae6ff;
   --primary-active: #023047ff;
   --secondary: #ffb703ff;
   --secondary-active: #fb8500ff;
-  --secondary-hover: #FFD05A;
+  --secondary-hover: #ffd05a;
 }
 
 * {
@@ -18,7 +18,8 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
-  color: var(--text)
+  color: var(--text);
+  user-select: none;
 }
 
 body {
@@ -31,5 +32,5 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Archivo Black', sans-serif;
+  font-family: "Archivo Black", sans-serif;
 }
